# auvide

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  GUI_MASTERPLAN.md  README.md  THIRD_PARTY_NOTICES.md  grade.py  gui.py  pyproject.toml  recipe.py  run-gui.bat  run.bat  setup.ps1  upscale_hdr.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  publish-pypi.yml
desktop/: .gitignore  AGENTS.md  README.md  index.html  package.json  pnpm-lock.yaml  requirements.dev.txt  requirements.txt  run-desktop.bat  run-gui.bat  run.bat  setup.ps1
desktop/legacy/: gui.py
desktop/resources/: uv-sidecar-manifest.json
desktop/scripts/: generate-contracts.mjs  stage-engine.mjs  stage-uv-sidecar.mjs
desktop/src/: main.ts  render-state.test.js  render-state.ts  styles.css
desktop/src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/resources/: bootstrap-manifest.json
desktop/src-tauri/src/: bootstrap.rs  lib.rs  main.rs  paths.rs  protocol.rs  query.rs  render.rs  runtime.rs
docs/: MASTERPLAN.md  MASTERPLAN_IMPLEMENTATION.md  PYPI_PUBLISHING.md
engine/: LICENSE  README.md  pyproject.toml
engine/src/auvide/: __init__.py  __main__.py  cli.py  media.py  progress.py  recipe.py  stages.py  tools.py
engine/tests/: test_grade.py  test_integration_pipeline.py  test_media.py  test_package_metadata.py  test_progress.py  test_recipe.py  test_stages.py  test_tools.py  test_version_sync.py
engine/tests/fixtures/: fake_realesrgan.py
engine/tests/fixtures/contracts/: media_sdr.json  recipe_v1.json
scripts/: sync_version.py
